<resources>
    <string name="app_name">AlarmClock</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ок</string>
    <string name="penalty">Размер пени за просып, ₽</string>
    <string name="dismiss_alarm_notification_title">Подъём!</string>
    <string name="dismiss_alarm_notification_body">Вы установили будильник на %1$s</string>
    <string name="dismiss_alarm_notification_dismiss_button_title">Отключить</string>
    <string name="alarmclock">Будильник</string>
    <string name="default_channel_name">alarmclockchannel</string>
    <string name="default_channel_description">Уведомления от будильника</string>
    <string name="delete">Удалить</string>
    <string name="dismiss">Отключить</string>
    <string name="alarm_failed_message">Вы пропустили будильник на </string>
    <string name="penalty_amount_warning">Ваш штраф: </string>
    <string name="title_name">Будильник</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="smile">Улыбнитесь!</string>
    <string name="pay">Оплатить</string>

</resources>
