<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_failed_message"
        android:textAlignment="center"
        android:textColor="#2f2f2f"
        android:textSize="36sp" />

    <Space
        android:layout_width="0dp"
        android:layout_height="20dp" />
    <TextView
        android:id="@+id/penaltyInformationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/penalty_amount_warning"
        android:textAlignment="center"
        android:textSize="18sp" />
    <Space
        android:layout_width="0dp"
        android:layout_height="60dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/blue"
        android:fontFamily="@font/roboto"
        android:text="@string/pay"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>