<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TimePicker
            android:id="@+id/timeSettingsPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:headerBackground="#2a5d68"
            android:numbersBackgroundColor="#DCDBE1"
            android:numbersSelectorColor="#2A5D68" />

        <EditText
            android:id="@+id/penaltySettingsField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/penalty"
            android:inputType="number"
            android:padding="15dp"
            android:textCursorDrawable="@null"
            android:backgroundTint="@color/blue"
            android:textColorHighlight="#C5D7D9"
            android:textColorLink="#2A5D68" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:weightSum="6">

            <Button
                android:id="@+id/cancelSettingsButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="#F6F6F8"
                android:fontFamily="@font/roboto"
                android:text="@string/cancel"
                android:textSize="18sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

            <Button
                android:id="@+id/confirmSettingsButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/blue"
                android:fontFamily="@font/roboto"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/deleteSettingsButton"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"

            android:background="#F6F6F8"
            android:fontFamily="@font/roboto"
            android:padding="16dp"
            android:selectAllOnFocus="false"
            android:text="@string/delete"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>