<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:layout_gravity="center">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/penaltyTimeView"
    android:layout_gravity="center"
    android:text="@string/alarm_failed_message"
    android:textSize="32sp"
    android:textAlignment="center"
    android:fontFamily="@font/roboto"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="15dp" />
    <TextView
        android:id="@+id/penaltyMoneyView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/penalty_amount_warning"
        android:textSize="24sp"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_thin"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="30dp" />
    <LinearLayout
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <Button
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:background="@drawable/logo"
            android:elevation="10dp"
            android:id="@+id/logo1"
            android:focusableInTouchMode="true"
            android:layout_weight="1"/>
        <Space
            android:layout_width="15dp"
            android:layout_height="30dp" />
        <Button
            android:layout_width="64dp"
            android:focusableInTouchMode="true"
            android:layout_height="match_parent"
            android:background="@drawable/logo2"
            android:id="@+id/logo2"
            android:elevation="10dp"
            android:layout_weight="1"/>
        <Space
            android:layout_width="15dp"
            android:layout_height="30dp" />
        <Button
            android:layout_width="64dp"
            android:focusableInTouchMode="true"
            android:layout_height="match_parent"
            android:background="@drawable/logo3"
            android:elevation="10dp"
            android:id="@+id/logo3"
            android:layout_weight="1"/>
    </LinearLayout>
    <Space
        android:layout_width="0dp"
        android:layout_height="30dp" />
    <Button
        android:id="@+id/payPenaltyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/blue"
        android:fontFamily="@font/roboto"
        android:text="@string/pay"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>